Settings tab added in navbar